# Vortex-Universal-Emulator

./: .gitignore  LICENSE  README.md  build.gradle.kts  keystore.properties.example  settings.gradle.kts
.github/workflows/: android-play-release.yml  android-release.yml  keep-alive.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libretro.h  rewrite_frontend.py  vortex_frontend.c  vortex_frontend.cpp  vortex_frontend_c.c  vortex_vulkan.cpp  vortex_vulkan.h
app/src/main/java/com/vortex/emulator/: MainActivity.kt  VortexApp.kt
app/src/main/java/com/vortex/emulator/core/: ControllerLayout.kt  CoreInfo.kt  CoreManager.kt  CoreSettings.kt  EmulationCore.kt  Platform.kt
app/src/main/java/com/vortex/emulator/di/: AppModule.kt
app/src/main/java/com/vortex/emulator/emulation/: AudioPlayer.kt  CoreDownloader.kt  EmulationEngine.kt  FrontendBridge.kt  FrontendType.kt  GamepadManager.kt  StandaloneDownloader.kt  StandaloneLauncher.kt  (+3 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_vortex_splash.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
distribution/whatsnew/en-US/: default.txt
docs/: github-environments.md
rust_frontend/: Cargo.toml  build.rs
rust_frontend/.cargo/: config.toml
rust_frontend/src/: core_catalog.rs  core_presets.rs  gl.rs  lib.rs  libretro.rs  log_shim.c
scripts/: set_github_secrets.sh
server/: lobby.js  package-lock.json  package.json  render.yaml
(+41 files in other folders)
