[package]
name = "vortex-frontend-rust"
version = "1.0.0"
edition = "2021"
description = "GPU-adaptive Rust libretro frontend for VortexEmulator"

[lib]
name = "vortex_frontend_rust"
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21", default-features = false }
log = "0.4"
android_logger = "0.14"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
panic = "abort"
codegen-units = 1
